# scankii

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  action.yml  cross_modal_receipt.json  pyproject.toml  run_debug.py  test1.json  test2.json  test3.json  usecase.md
.github/workflows/: scankii.yml
benchmark/: run_benchmark.py
examples/cross-modal-skill/: SKILL.md  run.py
examples/file-sink-skill/: run.py
examples/static-only-skill/: run.py
examples/unresolved-sink-skill/: run.py
examples/vulnerable-skill/: README.md  SKILL.md  run.py
hooks/: pre-commit
rules/: credentials.yaml  nl_patterns.yaml  sinks.yaml
scankii/: __init__.py  cli.py  remediation.py  scanner.py
scankii/core/: __init__.py  ast_analyzer.py  cross_modal.py  nl_analyzer.py  patterns.py  scorer.py
scankii/output/: __init__.py  cli_reporter.py  explain.py  json_reporter.py  sarif.py
scankii/rules/: credentials.yaml  malicious.yaml  sinks.yaml
scankii/runtime/: __init__.py  safe_logger.py
templates/: SKILL.md.template
tests/: __init__.py  test_agent_fabric_cve.py  test_ast_analyzer.py  test_cli.py  test_cross_modal.py  test_explain.py  test_nl_analyzer.py  test_patterns.py  test_real_agent_fabric.py  test_remediation.py  test_safe_logger.py  test_scanner.py  test_scorer.py
